myteo/test/analyze/type_check/patterns/wildcards.exp
Error: Expected type `Variant1` but found `Variant2`
test/analyze/type_check/patterns/wildcards.myte:31:6-12
 31 |     | Tup2 _ -> ()
    |       ^^^^^^

Error: Expected type `Variant1` but found `Variant2`
test/analyze/type_check/patterns/wildcards.myte:32:6-12
 32 |     | Rec2 _ -> ()
    |       ^^^^^^